[gd_scene load_steps=20 format=3 uid="uid://bsx4v52bb4o7d"]

[ext_resource type="Texture2D" uid="uid://cjdtlkbbe1l4l" path="res://assets/logo.png" id="1_dhej3"]
[ext_resource type="Script" path="res://src/menu/menu.gd" id="1_foue2"]
[ext_resource type="Texture2D" uid="uid://bnucogvy7hhad" path="res://assets/check.png" id="3_8aq5e"]
[ext_resource type="Texture2D" uid="uid://dh4xpj3ni4xg8" path="res://assets/uncheck.png" id="4_qrvo7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_anb0c"]
bg_color = Color(0.0823529, 0.0823529, 0.0823529, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_insp5"]
bg_color = Color(0.152941, 0.152941, 0.152941, 0)

[sub_resource type="Theme" id="Theme_wf420"]
CheckBox/icons/checked = ExtResource("3_8aq5e")
CheckBox/icons/unchecked = ExtResource("4_qrvo7")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7hjvv"]
bg_color = Color(0, 0, 0, 0.321569)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="LabelSettings" id="LabelSettings_5nim3"]
font_size = 32

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dat4c"]
bg_color = Color(0, 0, 0, 0.258824)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="LabelSettings" id="LabelSettings_4yere"]
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_o8v46"]
font_size = 24

[sub_resource type="LabelSettings" id="LabelSettings_oak8n"]
font_size = 24

[sub_resource type="LabelSettings" id="LabelSettings_hrgyy"]
font_size = 20

[sub_resource type="LabelSettings" id="LabelSettings_ri67x"]
font_size = 32

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gctci"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="Animation" id="Animation_v4lqq"]
resource_name = "launch"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0.0470588)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Main:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_y0fa2"]
resource_name = "start"
length = 1.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_r1iov"]
_data = {
"launch": SubResource("Animation_v4lqq"),
"start": SubResource("Animation_y0fa2")
}

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_foue2")

[node name="Background" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = -1200.0
offset_top = -600.0
offset_right = 2563.18
offset_bottom = 1606.0
texture = ExtResource("1_dhej3")
expand_mode = 3
stretch_mode = 1

[node name="Main" type="MarginContainer" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 100
theme_override_constants/margin_bottom = 100

[node name="VBoxContainer" type="VBoxContainer" parent="Main"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Main/VBoxContainer"]
layout_mode = 2

[node name="Container" type="Container" parent="Main/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="Main/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.75

[node name="TextureRect" type="TextureRect" parent="Main/VBoxContainer/HBoxContainer/MarginContainer"]
layout_mode = 2
texture = ExtResource("1_dhej3")
expand_mode = 5

[node name="Container2" type="Container" parent="Main/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Main/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="Play" type="Button" parent="Main/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_hover_color = Color(0.647059, 0.647059, 0.647059, 1)
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_anb0c")
theme_override_styles/hover = SubResource("StyleBoxFlat_anb0c")
theme_override_styles/pressed = SubResource("StyleBoxFlat_anb0c")
theme_override_styles/focus = SubResource("StyleBoxFlat_anb0c")
text = "Начать"

[node name="Settings" type="Button" parent="Main/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_hover_color = Color(0.647059, 0.647059, 0.647059, 1)
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_anb0c")
theme_override_styles/hover = SubResource("StyleBoxFlat_anb0c")
theme_override_styles/pressed = SubResource("StyleBoxFlat_anb0c")
theme_override_styles/focus = SubResource("StyleBoxFlat_anb0c")
text = "Настройки"

[node name="Achievements" type="Button" parent="Main/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_hover_color = Color(0.647059, 0.647059, 0.647059, 1)
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_anb0c")
theme_override_styles/hover = SubResource("StyleBoxFlat_insp5")
theme_override_styles/pressed = SubResource("StyleBoxFlat_insp5")
theme_override_styles/focus = SubResource("StyleBoxFlat_insp5")
text = "Достижения"

[node name="Play" type="MarginContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 100

[node name="HBoxContainer" type="HBoxContainer" parent="Play"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Play/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HBoxContainer" type="HBoxContainer" parent="Play/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0

[node name="CheckBox" type="CheckBox" parent="Play/HBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
theme = SubResource("Theme_wf420")
theme_override_styles/normal = SubResource("StyleBoxFlat_7hjvv")
theme_override_styles/pressed = SubResource("StyleBoxFlat_7hjvv")
theme_override_styles/hover = SubResource("StyleBoxFlat_7hjvv")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_7hjvv")
theme_override_styles/focus = SubResource("StyleBoxFlat_7hjvv")
icon_alignment = 1
expand_icon = true

[node name="Label" type="Label" parent="Play/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Обучение"
label_settings = SubResource("LabelSettings_5nim3")

[node name="Label2" type="Label" parent="Play/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Режим игры"

[node name="Button" type="Button" parent="Play/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_dat4c")
text = "Обычный"

[node name="Button2" type="Button" parent="Play/HBoxContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_dat4c")
text = "Строительный"

[node name="PlayBack" type="Button" parent="Play/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 10
theme_override_font_sizes/font_size = 28
theme_override_styles/normal = SubResource("StyleBoxFlat_dat4c")
theme_override_styles/hover = SubResource("StyleBoxFlat_dat4c")
theme_override_styles/pressed = SubResource("StyleBoxFlat_dat4c")
theme_override_styles/disabled = SubResource("StyleBoxFlat_dat4c")
theme_override_styles/focus = SubResource("StyleBoxFlat_dat4c")
text = "Назад"

[node name="VBoxContainer2" type="VBoxContainer" parent="Play/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Play/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "\"Абсолютно нормальная старая добрая Икея\""
label_settings = SubResource("LabelSettings_4yere")
horizontal_alignment = 2

[node name="Label2" type="Label" parent="Play/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "SCP-3008 - бесконечная IKEA. Бесконечные коридоры
мебели, бесконечные пространства главного зала.

Попробуй выжить здесь как можно дольше.
Исследуй магазин, остерегайся ночи и располагайся
поудобнее, ведь ЭТО ТВОЙ НОВЫЙ ДОМ и твоё вечное проклятие...
"
label_settings = SubResource("LabelSettings_o8v46")
horizontal_alignment = 2

[node name="Start" type="Button" parent="Play/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 10
theme_override_font_sizes/font_size = 28
theme_override_styles/normal = SubResource("StyleBoxFlat_dat4c")
theme_override_styles/hover = SubResource("StyleBoxFlat_dat4c")
theme_override_styles/pressed = SubResource("StyleBoxFlat_dat4c")
theme_override_styles/disabled = SubResource("StyleBoxFlat_dat4c")
theme_override_styles/focus = SubResource("StyleBoxFlat_dat4c")
text = "Начать"

[node name="Settings" type="MarginContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 100

[node name="VBoxContainer" type="VBoxContainer" parent="Settings"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Settings/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="Settings/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Динамическая камера"
label_settings = SubResource("LabelSettings_oak8n")

[node name="DynamicCameraCheckBox" type="CheckBox" parent="Settings/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
theme = SubResource("Theme_wf420")
theme_override_styles/normal = SubResource("StyleBoxFlat_7hjvv")
theme_override_styles/pressed = SubResource("StyleBoxFlat_7hjvv")
theme_override_styles/hover = SubResource("StyleBoxFlat_7hjvv")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_7hjvv")
theme_override_styles/focus = SubResource("StyleBoxFlat_7hjvv")
button_pressed = true
icon_alignment = 1
expand_icon = true

[node name="HBoxContainer2" type="HBoxContainer" parent="Settings/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="Settings/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Полный экран"
label_settings = SubResource("LabelSettings_oak8n")

[node name="FullScreenCheckBox" type="CheckBox" parent="Settings/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
theme = SubResource("Theme_wf420")
theme_override_styles/normal = SubResource("StyleBoxFlat_7hjvv")
theme_override_styles/pressed = SubResource("StyleBoxFlat_7hjvv")
theme_override_styles/hover = SubResource("StyleBoxFlat_7hjvv")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_7hjvv")
theme_override_styles/focus = SubResource("StyleBoxFlat_7hjvv")
button_pressed = true
icon_alignment = 1
expand_icon = true

[node name="Label" type="Label" parent="Settings/VBoxContainer"]
visible = false
layout_mode = 2
text = "Игра создана в ходе игрового джема Summer Game Forge за 3 дня.
Автор: BuzzyDev (Buzzy, mister_buzzy)"
label_settings = SubResource("LabelSettings_hrgyy")

[node name="SettingsBack" type="Button" parent="Settings/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 10
theme_override_font_sizes/font_size = 28
theme_override_styles/normal = SubResource("StyleBoxFlat_dat4c")
theme_override_styles/hover = SubResource("StyleBoxFlat_dat4c")
theme_override_styles/pressed = SubResource("StyleBoxFlat_dat4c")
theme_override_styles/disabled = SubResource("StyleBoxFlat_dat4c")
theme_override_styles/focus = SubResource("StyleBoxFlat_dat4c")
text = "Назад"

[node name="Achievements" type="MarginContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 100

[node name="VBoxContainer" type="VBoxContainer" parent="Achievements"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="Label" type="Label" parent="Achievements/VBoxContainer"]
layout_mode = 2
text = "Достижения"
label_settings = SubResource("LabelSettings_ri67x")
horizontal_alignment = 1

[node name="GridContainer" type="GridContainer" parent="Achievements/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/h_separation = 15
theme_override_constants/v_separation = 15
columns = 3

[node name="AchievementsBack" type="Button" parent="Achievements/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 10
theme_override_font_sizes/font_size = 28
theme_override_styles/normal = SubResource("StyleBoxFlat_dat4c")
theme_override_styles/hover = SubResource("StyleBoxFlat_dat4c")
theme_override_styles/pressed = SubResource("StyleBoxFlat_dat4c")
theme_override_styles/disabled = SubResource("StyleBoxFlat_dat4c")
theme_override_styles/focus = SubResource("StyleBoxFlat_dat4c")
text = "Назад"

[node name="Panel" type="Panel" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_gctci")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_r1iov")
}

[connection signal="pressed" from="Main/VBoxContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Main/VBoxContainer/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Main/VBoxContainer/VBoxContainer/Achievements" to="." method="_on_achievements_pressed"]
[connection signal="toggled" from="Play/HBoxContainer/VBoxContainer/HBoxContainer/CheckBox" to="." method="_on_check_box_toggled"]
[connection signal="pressed" from="Play/HBoxContainer/VBoxContainer/PlayBack" to="." method="_on_play_back_pressed"]
[connection signal="pressed" from="Play/HBoxContainer/VBoxContainer2/Start" to="." method="_on_start_pressed"]
[connection signal="toggled" from="Settings/VBoxContainer/HBoxContainer/DynamicCameraCheckBox" to="." method="_on_dynamic_camera_check_box_toggled"]
[connection signal="toggled" from="Settings/VBoxContainer/HBoxContainer2/FullScreenCheckBox" to="." method="_on_full_screen_check_box_toggled"]
[connection signal="pressed" from="Settings/VBoxContainer/SettingsBack" to="." method="_on_settings_back_pressed"]
[connection signal="pressed" from="Achievements/VBoxContainer/AchievementsBack" to="." method="_on_achievements_back_pressed"]
